Fix somethings and create new pdfs

--- a/html/index.html
+++ b/html/index.html
@@ -120,7 +120,7 @@
     <ol class=toc>
       <li class="contents-intro"><a href="00_intro.html">Introducción</a>
       <li>
-        <h3>(Part 1: Lenguaje)</h3>
+        <h3>(Parte 1: Lenguaje)</h3>
         <a href="01_values.html">Valores, Tipos y Operadores</a>
       </li>
       <li><a href="02_program_structure.html">Estructura del Programa</a></li>
