--- a/html/index.html
+++ b/html/index.html
@@ -156,8 +156,8 @@
 
   <div id=links>
 
-    <p>Una versión en papel de Eloquent JavaScript, incluyendo un capítulo
-      adicional, está siendo publicada por <a href="http://www.nostarch.com/ejs3">No Starch Press</a>.</p>
+    <p>Una versión en papel (en inglés) de Eloquent JavaScript, incluyendo un capítulo
+      adicional, es publicada por <a href="http://www.nostarch.com/ejs3">No Starch Press</a>.</p>
 
     <h2>Otrás páginas</h2>
 
