Add more clarification

--- a/html/index.html
+++ b/html/index.html
@@ -87,7 +87,7 @@
       </h2>
 
       <p>Este libro trata de JavaScript, programación y los maravillosos mundos digitales. Puedes leerlo online aquí, o
-        comprar tu propia <a href="https://nostarch.com/ejs3">copia en papel</a> (3ª edición).</p>
+        comprar tu propia <a href="https://nostarch.com/ejs3">copia en papel</a> (3ª edición y en inglés).</p>
 
       <p>Escrito por Marijn Haverbeke.</p>
       <p>Traducido al español por <a href='https://twitch.tv/midudev'>@midudev</a></p>
